--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,13 +42,26 @@ body {
 }
 
 .ios .card {
-  transform: translateY(12px) scale(0.85);
+  transform: translateY(0px) scale(1.1);
   transform-origin: top center;
 }
 
 .ios .ios-shift-down {
-  transform: translateY(16px);
+  transform: translateY(0px);
 }
+.ios .cardContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 60vh;
+  position: absolute;
+  top:35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
 
 body::before {
   content: '';
@@ -57,7 +70,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #14D3C9;
+  background: #FFF100;
   z-index: -1;
 }
 
@@ -68,7 +81,7 @@ body::before {
   width: 100%;
   height: 60vh;
   position: absolute;
-  top: 45%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
@@ -179,7 +192,7 @@ body::before {
 
 .swipeButtons {
   padding: 18px;
-  background: #000000;
+  background: #2268AC;
   color: white !important;
   border: none;
   transition: transform 0.2s;
@@ -249,9 +262,9 @@ body::before {
 
 .bottomCardTextContainer {
   position: absolute;
-  bottom: 0px;
+  bottom: -5px;
   width: 100%;
-  height: 25%;
+  height: 10%;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(255, 255, 255, 0.7) 40%, rgba(255, 255, 255, 0.9) 100%);
   border-radius: inherit;
   padding: 0 20px 0 0;
@@ -284,7 +297,7 @@ body::before {
 
 .productName {
   color: #000000;
-  font-size: 1.2em;
+  font-size: 1.0em;
   font-weight: 600;
   text-align: center;
   line-height: 1.3;
@@ -333,7 +346,7 @@ body::before {
 
 .swipeButtons {
   padding: 18px;
-  background: #000000;
+  background: #2268AC;
   color: white !important;
   border: none;
   transition: transform 0.2s;
